# STK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake
Applications/stkAuroraTrackerApp/: CMakeLists.txt  stkAuroraTrackerApp.cpp  stkAuroraTrackerApp.h  stkAuroraTrackerApp.ui  stkAuroraTrackerAppMain.cpp  stkSlicerApp.cpp  stkSlicerApp.h  stkSlicerApp.ui  target_libraries.cmake
Applications/stkHyperthermiaApp/: CMakeLists.txt  stkHyperthermiaAppMain.cpp  target_libraries.cmake
Applications/stkPolarisTrackerApp/: CMakeLists.txt  stkPolarisTrackerAppMain.cpp
Applications/stkRobotUR5Server/: CMakeLists.txt  stkRobotUR5Server.qrc  stkRobotUR5ServerMain.cpp  stkRobotUR5ServerWidget.cpp  stkRobotUR5ServerWidget.h  stkRobotUR5ServerWidget.ui
Applications/stkRobotUR5Simulator/: CMakeLists.txt  stkRobotUR5SimulatorMain.cpp  stkRobotUR5SimulatorWidget.cpp  stkRobotUR5SimulatorWidget.h  stkRobotUR5SimulatorWidget.ui  target_libraries.cmake
Applications/stkSlicerLauncherApp/: CMakeLists.txt  stkSlicerApp.cpp  stkSlicerApp.ui  target_libraries.cmake
CMake/: STKConfig.cmake.in  STKConfigVersion.cmake.in  STKPluginUseFile.cmake.in  UseSTK.cmake.in  stkBlockCheckDependencies.cmake  stkConfig.h.in  stkFunctionAddPluginRepo.cmake  stkFunctionCheckCompilerFlags.cmake  stkFunctionCheckoutRepo.cmake  stkFunctionCompileSnippets.cmake  stkFunctionExtractOptionNameAndValue.cmake  stkFunctionExtractPluginTargets.cmake  stkFunctionGenerateDGraphInput.cmake  stkFunctionGeneratePluginManifest.cmake  stkFunctionGeneratePluginUseFile.cmake  stkFunctionGenerateProjectXml.cmake  stkFunctionGetAllPluginTargets.cmake  stkFunctionGetCompilerVisibilityFlags.cmake  stkFunctionGetGccVersion.cmake  stkFunctionGetIncludeDirs.cmake  stkFunctionGetLibraryDirs.cmake  stkFunctionGetPluginDependencies.cmake  stkFunctionGetTargetDependencies.cmake  stkMacroAddStkLibraryOptions.cmake  stkMacroBuildApp.cmake  stkMacroBuildLib.cmake  stkMacroBuildLibWrapper.cmake  stkMacroBuildPlugin.cmake  stkMacroBuildQtPlugin.cmake  stkMacroCompilePythonScript.cmake  stkMacroEmptyExternalProject.cmake  stkMacroGenerateMocs.cmake  stkMacroGeneratePluginResourceFile.cmake  stkMacroListFilter.cmake  stkMacroOptionUtils.cmake  stkMacroParseArguments.cmake  stkMacroSetPaths.cmake  stkMacroSetupPlugins.cmake  stkMacroSetupQt.cmake  stkMacroTargetLibraries.cmake  (+2 more)
CMakeExternals/: DCMTK.cmake  IGSTK.cmake  ITK.cmake  OpenIGTLink.cmake  VTK.cmake  zlib.cmake
Libs/: stkExport.h.in
Libs/Hyperthermia/: CMakeLists.txt  stkHyperAlgorithmFDM.cpp  stkHyperAlgorithmFDM.h  stkHyperFieldRange.cpp  stkHyperFieldRange.h  stkHyperthermiaBase.cpp  stkHyperthermiaBase.h  stkHyperthermiaBase.ui  stkHyperthermiaBase_Private.cpp  stkHyperthermiaBase_Private.h  stkMicrowaveAblation.cpp  stkMicrowaveAblation.h  stkMicrowaveHyper.cpp  stkMicrowaveHyper.h  stkMicrowaveRoute.cpp  stkMicrowaveRoute.h  stkSurgeryRoute.cpp  stkSurgeryRoute.h  stkThermalField.cpp  stkThermalField.h  target_libraries.cmake
Libs/RoboticSurgery/: CMakeLists.txt  stkRobotServer.cpp  stkRobotServer.h  stkRobotSimulator.cpp  stkRobotSimulator.h
Libs/SlicerExt/: CMakeLists.txt  stkMRMLCrossPointNode.cpp  stkMRMLCrossPointNode.h  stkMRMLHelper.cpp  stkMRMLHelper.h  stkMRMLProbeDisplayableManager.cpp  stkMRMLProbeDisplayableManager.h  stkMRMLProbeNode.cpp  stkMRMLProbeNode.h  stkMRMLProbeStorageNode.cpp  stkMRMLProbeStorageNode.h  stkMRMLVolumeNodeDisplayHelper.cpp  stkMRMLVolumeNodeDisplayHelper.h  stkMeasureRepresentation.cpp  stkMeasureRepresentation.h  stkMeasureWidget.cpp  stkMeasureWidget.h  stkProbeRepresentation3D.cpp  stkProbeRepresentation3D.h  stkProbeWidget.cpp  stkProbeWidget.h  stkRoutePlanningWidget.cpp  stkRoutePlanningWidget.h  stkRoutePlanningWidget.ui  stkSlicerApp.cpp  stkSlicerApp.h  stkSlicerApp.ui  stkSlicerDataWidget.cpp  stkSlicerDataWidget.h  stkSlicerDataWidget.ui  stkSlicerDisplayHelper.cpp  stkSlicerDisplayHelper.h  stkSlicerExt.cpp  stkSlicerExt.h  stkSlicerHelper.cpp  stkSlicerHelper.h  stkSlicerLayoutWidget.cpp  stkSlicerLayoutWidget.h  stkSlicerLayoutWidget.ui  stkSlicerSliceNodeWidget.cpp  (+11 more)
Libs/SlicerExt/Resources/: stkSlicerExt.qrc
Libs/SurgeryNavigation/: CMakeLists.txt  stkAuroraTracker.cpp  stkAuroraTracker.h  stkAuroraTrackerTool.cpp  stkAuroraTrackerTool.h  stkAuroraTrackerWidget.cpp  stkAuroraTrackerWidget.h  stkAuroraTrackerWidget.ui  stkFiducialMarkerRegistrationWidget.cpp  stkFiducialMarkerRegistrationWidget.h  stkFiducialMarkerRegistrationWidget.ui  stkIGTLCircularBuffer.cpp  stkIGTLCircularBuffer.h  stkIGTLImageClient.cpp  stkIGTLImageClient.h  stkIGTLImageClientNode.cpp  stkIGTLImageClientNode.h  stkIGTLServerManager.cpp  stkIGTLServerManager.h  stkIGTLServerThread.cpp  stkIGTLServerThread.h  stkIGTLToMRMLBase.cpp  stkIGTLToMRMLBase.h  stkIGTLToMRMLImage.cpp  stkIGTLToMRMLImage.h  stkIGTLToMRMLLinearTransform.cpp  stkIGTLToMRMLLinearTransform.h  stkIGTLToMRMLPosition.cpp  stkIGTLToMRMLPosition.h  stkMRMLIGTLImageClientNode.cpp  stkMRMLIGTLImageClientNode.h  stkMRMLIGTLServerNode.cpp  stkMRMLIGTLServerNode.h  stkPivotCalibrationWidget.cpp  stkPivotCalibrationWidget.h  stkPivotCalibrationWidget.ui  stkPolarisPivotCalibrationWidget.cpp  stkPolarisPivotCalibrationWidget.h  stkPolarisPivotCalibrationWidget.ui  stkPolarisTracker.cpp  (+18 more)
Libs/SurgeryNavigation/Resources/: stkSurgeryNavigation.qrc
Modules/: CMakeLists.txt
Modules/VolumeDisplayController/: CMakeLists.txt  qSlicerVolumeDisplayControllerModule.cxx  qSlicerVolumeDisplayControllerModule.h  qSlicerVolumeDisplayControllerModuleWidget.cxx  qSlicerVolumeDisplayControllerModuleWidget.h
Modules/VolumeDisplayController/Logic/: vtkSlicerVolumeDisplayControllerLogic.cxx  vtkSlicerVolumeDisplayControllerLogic.h
Modules/VolumeDisplayController/Resources/: qSlicerVolumeDisplayControllerModule.qrc
Modules/VolumeDisplayController/Resources/UI/: qSlicerVolumeDisplayControllerFooBarWidget.ui  qSlicerVolumeDisplayControllerModuleWidget.ui
Modules/VolumeDisplayController/Widgets/: qSlicerVolumeDisplayControllerFooBarWidget.cxx  qSlicerVolumeDisplayControllerFooBarWidget.h
(+50 files in other folders)
